# KalshiMarketMaker

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  runner.py
analysis/: phase1_calibration.py
kalshi_market_maker/: factories.py
kalshi_market_maker/cli/: cancel_all.py  dashboard.py  list_sports.py  mm.py  observe.py
kalshi_market_maker/core/: avellaneda.py  kalshi_api.py
kalshi_market_maker/runtime/: dynamic.py  workers.py
kalshi_market_maker/selection/: scoring.py
scripts/: diagnose_markets.py
